[gd_scene load_steps=4 format=3 uid="uid://cb015iv5pglmx"]

[ext_resource type="Script" path="res://Abilities/SpikeTrap/SpikeTrap.gd" id="1_1pqny"]
[ext_resource type="Texture2D" uid="uid://c2l7rrkoia3q" path="res://Abilities/SpikeTrap/Spiketrap 1.png" id="2_ibaxa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4a7tw"]
size = Vector2(30, 30)

[node name="SpikeTrap" type="Node2D"]
z_as_relative = false
scale = Vector2(3, 3)
script = ExtResource("1_1pqny")
damage = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ibaxa")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4a7tw")

[node name="RetractCooldown" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="RetractCooldown" to="." method="_on_retract_cooldown_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
